# sagemaker-project-chitrakatha

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  ct.yml  deploy.yml  tf-check.yml
data/raw/: adarsh_chitra_katha_detailed.txt  durga_comics_detailed.txt
data/scripts/: ingest_to_faiss.py  ingest_to_vectors.py  synthesize_training_pairs.py  upload_to_bronze.py
docs/: ARCHITECTURAL_DECISIONS.md  IMPLEMENTATION_PLAN.md  INTERVIEW_PREP.md  PROGRESS.md  pipeline_dag.md
infra/terraform/: backend.tf  cloudwatch.tf  faiss_index.tf  github_oidc.tf  iam.tf  kms.tf  lambda.tf  main.tf  networking.tf  outputs.tf  pgvector.tf  rds.tf  s3.tf  s3_vectors.tf  secrets.tf  studio.tf  variables.tf
pipeline/: pipeline.py  requirements.txt
pipeline/steps/: __init__.py  embed_and_index.py  evaluate.py  preprocessing.py  preprocessing_requirements.txt  synthesize_pairs.py  train.py
scripts/: bootstrap_backend.sh  cache_base_model_to_s3.py
serving/: deploy_endpoint.py  inference.py  requirements.txt
serving/lambda/: handler.py  requirements.txt
serving/lambda/package/: handler.py
src/chitrakatha/: __init__.py  config.py  exceptions.py
src/chitrakatha/ingestion/: __init__.py  chunker.py  embedder.py  faiss_writer.py  pgvector_writer.py  vector_writer.py
tests/integration/: __init__.py  test_bedrock_models.py
tests/unit/: __init__.py  test_chunker.py  test_embedder.py  test_faiss_writer.py  test_lambda_handler.py  test_pgvector_writer.py  test_preprocessor.py  test_vector_writer.py
(+8 files in other folders)
